--- a/lee_gradle/src/main/webapp/resurces/lee/css/lee.css
+++ b/lee_gradle/src/main/webapp/resurces/lee/css/lee.css
@@ -3,8 +3,20 @@
   text-align: right;
   font-weight: bold;
 }
-
-
+.jb-center {
+        text-align: center;
+ }
+      
+.search_div{
+	border: 1px solid #cccccc;
+	background-color: #dbeef5;	
+	padding:10px 5px 0 5px;
+	margin-bottom:30px;
+}
+.searchBtn_div{
+	float:right;
+	text-align:right	
+}
 
 /*
  * Sidebar
@@ -47,6 +59,4 @@
   background-color: #428bca;
 }
 
-.jb-center {
-        text-align: center;
-      }
+}
