--- a/lee_gradle/src/main/webapp/resources/lee/css/lee_default.css
+++ b/lee_gradle/src/main/webapp/resources/lee/css/lee_default.css
@@ -3,6 +3,7 @@
   font-weight: bold;
 }
 
+.padding_0{padding:0px;}
 
 dt.writeinfo  {font-size:12px; color:#9b9b9b; }
 dd.contents{border-bottom:2px dotted #E7E7E7;}
