--- a/lee_gradle/src/main/webapp/resources/lee/css/lee_div.css
+++ b/lee_gradle/src/main/webapp/resources/lee/css/lee_div.css
@@ -1,24 +1,18 @@
 .board_div{
 	padding:0px 20px 0px 20px;
-	width:80%;
+	width:90%;
 	margin :0 auto;
 }
- /* .mobile_on{display:none;}
- .mobile_off{visibility:visible} */
+ mobile_on{visibility:hidden;}
+
 
 @media screen and (max-width: 765px){
 .board_div{
 	padding:0px 0px 0px 0px;
-	width:95%;
+	width:98%;
 	margin :0 auto;
 }
- 
- /* .mobile_on{vdisplay:visible}
- .mobile_off{display:none} */
- 
- #unseen table td:nth-child(1),
-	#unseen table th:nth-child(1){display: none;}
- 
+
 }
  
 
