--- a/lee_gradle/src/main/webapp/resources/lee/css/lee_default.css
+++ b/lee_gradle/src/main/webapp/resources/lee/css/lee_default.css
@@ -7,3 +7,17 @@
 
 dt.writeinfo  {font-size:12px; color:#9b9b9b; }
 dd.contents{border-bottom:2px dotted #E7E7E7;}
+
+
+
+
+
+/*  width */
+.w-10{width:10%!important}
+.w-20{width:20%!important}
+.w-30{width:30%!important}
+.w-40{width:40%!important}
+.w-60{width:60%!important}
+.w-70{width:70%!important}
+.w-80{width:80%!important}
+.w-90{width:90%!important}
